// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - Common - ModheaderSection =>  Snapshot ModheaderSection con link 1`] = `
<section
  class="mod-headersection  --line"
>
  <h3
    class="com-title --l"
  >
    <a
      class="com-link"
      href="https://lanacion.com.ar/"
      title="Titulo Separador"
    >
      Titulo Separador
    </a>
  </h3>
</section>
`;

exports[`Private - Common - ModheaderSection =>  Snapshots ModheaderSection 1`] = `
<section
  class="mod-headersection  --line"
>
  <h3
    class="com-title --l"
  >
    Titulo Separador
  </h3>
</section>
`;
